# tool.that

./: .gitattributes  READMEd.md  dockerfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
static/compress/: compress.html
static/fonts/: stylesheet.css
static/javascript/: config.js  gettwitter.js  referer.js  svgnator.js
static/profiles/: profiles.html  twitter.html
static/styles/: icons.css  reactive.css  style.css  text.css
templates/: index.html
